@@ -1162,7 +1162,7 @@ public class MongoDBUtils
                     try
                     {
                         Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), mmd.getOrderMetaData() != null);
-                        coll = (Collection<Object>) instanceType.newInstance();
+                        coll = (Collection<Object>) instanceType.getDeclaredConstructor().newInstance();
                     }
                     catch (Exception e)
                     {
@@ -1210,7 +1210,7 @@ public class MongoDBUtils
                     try
                     {
                         Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), mmd.getOrderMetaData() != null);
-                        map = (Map) instanceType.newInstance();
+                        map = (Map) instanceType.getDeclaredConstructor().newInstance();
                     }
                     catch (Exception e)
                     {
