@@ -166,7 +166,7 @@ public class FetchEmbeddedFieldManager extends FetchFieldManager
                     try
                     {
                         Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), mmd.getOrderMetaData() != null);
-                        coll = (Collection<Object>) instanceType.newInstance();
+                        coll = (Collection<Object>) instanceType.getDeclaredConstructor().newInstance();
                     }
                     catch (Exception e)
                     {
