@@ -426,7 +426,7 @@ public class FetchFieldManager extends AbstractFetchFieldManager
                     try
                     {
                         Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), mmd.getOrderMetaData() != null);
-                        coll = (Collection<Object>) instanceType.newInstance();
+                        coll = (Collection<Object>) instanceType.getDeclaredConstructor().newInstance();
                     }
                     catch (Exception e)
                     {
@@ -555,7 +555,7 @@ public class FetchFieldManager extends AbstractFetchFieldManager
                     try
                     {
                         Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), null);
-                        map = (Map) instanceType.newInstance();
+                        map = (Map) instanceType.getDeclaredConstructor().newInstance();
                     }
                     catch (Exception e)
                     {
@@ -909,7 +909,7 @@ public class FetchFieldManager extends AbstractFetchFieldManager
             try
             {
                 Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), mmd.getOrderMetaData() != null);
-                coll = (Collection<Object>) instanceType.newInstance();
+                coll = (Collection<Object>) instanceType.getDeclaredConstructor().newInstance();
             }
             catch (Exception e)
             {
@@ -1007,7 +1007,7 @@ public class FetchFieldManager extends AbstractFetchFieldManager
             try
             {
                 Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), null);
-                map = (Map) instanceType.newInstance();
+                map = (Map) instanceType.getDeclaredConstructor().newInstance();
             }
             catch (Exception e)
             {
